lib/src/bindings/libsignal_bindings.dart


@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerPublicKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_publickey_serialize(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerPublicKey obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerPublicKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_publickey_get_public_key_bytes(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerPublicKey obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerProtocolAddress,
  )
>()
external ffi.Pointer<SignalFfiError> signal_address_get_device_id(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerProtocolAddress obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    SignalConstPointerProtocolAddress,
  )
>()
external ffi.Pointer<SignalFfiError> signal_address_get_name(
  ffi.Pointer<ffi.Pointer<ffi.Char>> out,
  SignalConstPointerProtocolAddress obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Bool>,
    SignalConstPointerPublicKey,
    SignalConstPointerPublicKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_publickey_equals(
  ffi.Pointer<ffi.Bool> out,
  SignalConstPointerPublicKey lhs,
  SignalConstPointerPublicKey rhs,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Int32>,
    SignalConstPointerPublicKey,
    SignalConstPointerPublicKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_publickey_compare(
  ffi.Pointer<ffi.Int32> out,
  SignalConstPointerPublicKey key1,
  SignalConstPointerPublicKey key2,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Bool>,
    SignalConstPointerPublicKey,
    SignalBorrowedBuffer,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_publickey_verify(
  ffi.Pointer<ffi.Bool> out,
  SignalConstPointerPublicKey key,
  SignalBorrowedBuffer message,
  SignalBorrowedBuffer signature,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPrivateKey>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_privatekey_deserialize(
  ffi.Pointer<SignalMutPointerPrivateKey> out,
  SignalBorrowedBuffer data,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerPrivateKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_privatekey_serialize(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerPrivateKey obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(ffi.Pointer<SignalMutPointerPrivateKey>)
>()
external ffi.Pointer<SignalFfiError> signal_privatekey_generate(
  ffi.Pointer<SignalMutPointerPrivateKey> out,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPublicKey>,
    SignalConstPointerPrivateKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_privatekey_get_public_key(
  ffi.Pointer<SignalMutPointerPublicKey> out,
  SignalConstPointerPrivateKey k,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerPrivateKey,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_privatekey_sign(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerPrivateKey key,
  SignalBorrowedBuffer message,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerPrivateKey,
    SignalConstPointerPublicKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_privatekey_agree(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerPrivateKey private_key,
  SignalConstPointerPublicKey public_key,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerKyberPublicKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_kyber_public_key_serialize(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerKyberPublicKey obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerKyberPublicKey>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_kyber_public_key_deserialize(
  ffi.Pointer<SignalMutPointerKyberPublicKey> out,
  SignalBorrowedBuffer data,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerKyberSecretKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_kyber_secret_key_serialize(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerKyberSecretKey obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerKyberSecretKey>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_kyber_secret_key_deserialize(
  ffi.Pointer<SignalMutPointerKyberSecretKey> out,
  SignalBorrowedBuffer data,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Bool>,
    SignalConstPointerKyberPublicKey,
    SignalConstPointerKyberPublicKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_kyber_public_key_equals(
  ffi.Pointer<ffi.Bool> out,
  SignalConstPointerKyberPublicKey lhs,
  SignalConstPointerKyberPublicKey rhs,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerKyberKeyPair>,
  )
>()
external ffi.Pointer<SignalFfiError> signal_kyber_key_pair_generate(
  ffi.Pointer<SignalMutPointerKyberKeyPair> out,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerKyberPublicKey>,
    SignalConstPointerKyberKeyPair,
  )
>()
external ffi.Pointer<SignalFfiError> signal_kyber_key_pair_get_public_key(
  ffi.Pointer<SignalMutPointerKyberPublicKey> out,
  SignalConstPointerKyberKeyPair key_pair,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerKyberSecretKey>,
    SignalConstPointerKyberKeyPair,
  )
>()
external ffi.Pointer<SignalFfiError> signal_kyber_key_pair_get_secret_key(
  ffi.Pointer<SignalMutPointerKyberSecretKey> out,
  SignalConstPointerKyberKeyPair key_pair,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerPublicKey,
    SignalConstPointerPrivateKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_identitykeypair_serialize(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerPublicKey public_key,
  SignalConstPointerPrivateKey private_key,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerPublicKey,
    SignalConstPointerPrivateKey,
    SignalConstPointerPublicKey,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_identitykeypair_sign_alternate_identity(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerPublicKey public_key,
  SignalConstPointerPrivateKey private_key,
  SignalConstPointerPublicKey other_identity,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Bool>,
    SignalConstPointerPublicKey,
    SignalConstPointerPublicKey,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_identitykey_verify_alternate_identity(
  ffi.Pointer<ffi.Bool> out,
  SignalConstPointerPublicKey public_key,
  SignalConstPointerPublicKey other_identity,
  SignalBorrowedBuffer signature,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerFingerprint>,
    ffi.Uint32,
    ffi.Uint32,
    SignalBorrowedBuffer,
    SignalConstPointerPublicKey,
    SignalBorrowedBuffer,
    SignalConstPointerPublicKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_fingerprint_new(
  ffi.Pointer<SignalMutPointerFingerprint> out,
  int iterations,
  int version,
  SignalBorrowedBuffer local_identifier,
  SignalConstPointerPublicKey local_key,
  SignalBorrowedBuffer remote_identifier,
  SignalConstPointerPublicKey remote_key,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerFingerprint,
  )
>()
external ffi.Pointer<SignalFfiError> signal_fingerprint_scannable_encoding(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerFingerprint obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    SignalConstPointerFingerprint,
  )
>()
external ffi.Pointer<SignalFfiError> signal_fingerprint_display_string(
  ffi.Pointer<ffi.Pointer<ffi.Char>> out,
  SignalConstPointerFingerprint obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Bool>,
    SignalBorrowedBuffer,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_fingerprint_compare(
  ffi.Pointer<ffi.Bool> out,
  SignalBorrowedBuffer fprint1,
  SignalBorrowedBuffer fprint2,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSignalMessage>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_message_deserialize(
  ffi.Pointer<SignalMutPointerSignalMessage> out,
  SignalBorrowedBuffer data,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerSignalMessage,
  )
>()
external ffi.Pointer<SignalFfiError> signal_message_get_body(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerSignalMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerSignalMessage,
  )
>()
external ffi.Pointer<SignalFfiError> signal_message_get_serialized(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerSignalMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerSignalMessage,
  )
>()
external ffi.Pointer<SignalFfiError> signal_message_get_counter(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerSignalMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerSignalMessage,
  )
>()
external ffi.Pointer<SignalFfiError> signal_message_get_message_version(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerSignalMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSignalMessage>,
    ffi.Uint8,
    SignalBorrowedBuffer,
    SignalConstPointerPublicKey,
    ffi.Uint32,
    ffi.Uint32,
    SignalBorrowedBuffer,
    SignalConstPointerPublicKey,
    SignalConstPointerPublicKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_message_new(
  ffi.Pointer<SignalMutPointerSignalMessage> out,
  int message_version,
  SignalBorrowedBuffer mac_key,
  SignalConstPointerPublicKey sender_ratchet_key,
  int counter,
  int previous_counter,
  SignalBorrowedBuffer ciphertext,
  SignalConstPointerPublicKey sender_identity_key,
  SignalConstPointerPublicKey receiver_identity_key,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Bool>,
    SignalConstPointerSignalMessage,
    SignalConstPointerPublicKey,
    SignalConstPointerPublicKey,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_message_verify_mac(
  ffi.Pointer<ffi.Bool> out,
  SignalConstPointerSignalMessage msg,
  SignalConstPointerPublicKey sender_identity_key,
  SignalConstPointerPublicKey receiver_identity_key,
  SignalBorrowedBuffer mac_key,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPublicKey>,
    SignalConstPointerSignalMessage,
  )
>()
external ffi.Pointer<SignalFfiError> signal_message_get_sender_ratchet_key(
  ffi.Pointer<SignalMutPointerPublicKey> out,
  SignalConstPointerSignalMessage m,
);
